--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/beefy main.jsx:main.js --live --cwd public -- -t reactify"
+    "start": "./node_modules/.bin/beefy main.jsx:main.js --live --cwd public -- -t reactify -t stylify"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,8 @@
     "jquery": "^2.1.0",
     "envify": "^1.2.1",
     "react": "^0.10.0",
-    "beefy": "^1.1.0"
+    "beefy": "^1.1.0",
+    "insert-css": "^0.1.1",
+    "stylify": "^0.1.3"
   }
 }
