--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/beefy main.jsx:main.js --live --cwd public -- -t reactify -t stylify"
+    "start": "webpack-dev-server --content-base ./public --port 2233"
   },
   "repository": {
     "type": "git",
@@ -19,13 +19,14 @@
   "homepage": "https://github.com/roberttod/docit",
   "dependencies": {
     "express": "^4.1.0",
-    "browserify": "^3.44.2",
-    "reactify": "^0.13.1",
     "jquery": "^2.1.0",
     "envify": "^1.2.1",
     "react": "^0.10.0",
-    "beefy": "^1.1.0",
-    "insert-css": "^0.1.1",
-    "stylify": "^0.1.3"
+    "stylify": "^0.1.3",
+    "webpack": "^1.1.8",
+    "jsx-loader": "^0.10.0",
+    "stylus-loader": "^0.2.0",
+    "style-loader": "^0.6.3",
+    "css-loader": "^0.6.12"
   }
 }
