--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --content-base ./public --port 2233"
+    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base ./public --port 2233"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,9 @@
     "jsx-loader": "^0.10.0",
     "stylus-loader": "^0.2.0",
     "style-loader": "^0.6.3",
-    "css-loader": "^0.6.12"
+    "css-loader": "^0.6.12",
+    "file-loader": "^0.5.1",
+    "url-loader": "^0.5.5",
+    "font-awesome": "^4.0.3"
   }
 }
